# typerbeast

./: .gitignore  LICENSE  README.md  package.json  tsconfig.base.json  turbo.json
apps/api/: .env.example  Cargo.toml  diesel.toml  package.json  rustfmt.toml
apps/api/migrations/2025-04-21-071256_start_user_and_sessions/: down.sql  up.sql
apps/api/migrations/2025-04-23-104336_add_texts_and_dictionaries/: down.sql  up.sql
apps/api/migrations/2025-06-09-153222_store_results/: down.sql  up.sql
apps/api/migrations/2025-06-09-161939_add_rooms_and_user_in_rooms/: down.sql  up.sql
apps/api/migrations/2025-06-10-102034_add_moderators_and_text_submit/: down.sql  up.sql
apps/api/migrations/2025-06-10-123727_add_platform_leagues/: down.sql  up.sql
apps/api/migrations/2025-06-16-190109_add_individual_author_to_text/: down.sql  up.sql
apps/api/src/: auth.rs  config.rs  main.rs  router.rs
apps/api/src/app/: auth.rs  config.rs  error.rs  middleware.rs  mod.rs  openapi.rs  room.rs  router.rs  state.rs  types.rs
apps/api/src/db/: custom_types.rs  init.rs  mod.rs  schema.rs
apps/api/src/db/models/: dictionary.rs  mod.rs  pending_text.rs  result.rs  room.rs  room_user.rs  session.rs  text.rs  user.rs
apps/api/src/routes/: dictionaries.rs  leaderboard.rs  mod.rs  rooms.rs  texts.rs  user.rs  ws.rs
apps/api/src/utils/: mod.rs
apps/mobile/: .env.example  app.json  babel.config.js  eslint.config.mjs  metro.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mobile/android/: settings.gradle
apps/mobile/android/app/: build.gradle
apps/mobile/android/app/src/main/java/com/typerbeastapp/: MainActivity.kt  MainApplication.kt
apps/mobile/android/app/src/main/res/values/: strings.xml
apps/mobile/ios/: Podfile
apps/mobile/ios/typerbeastapp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
apps/mobile/ios/typerbeastapp.xcodeproj/: project.pbxproj
apps/mobile/ios/typerbeastapp.xcodeproj/xcshareddata/xcschemes/: typerbeastapp.xcscheme
apps/mobile/src/: App.tsx  Bootstrap.tsx
apps/mobile/src/i18n/: hooks.ts
apps/web/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.js  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/[lng]/: layout.tsx  page.tsx
apps/web/src/app/[lng]/dictionaries/: page.tsx
apps/web/src/app/[lng]/dictionaries/[dict_id]/: page.tsx
apps/web/src/app/[lng]/dictionaries/[dict_id]/suggest/: page.tsx
apps/web/src/app/[lng]/leaderboard/: page.tsx
apps/web/src/app/[lng]/login/: page.tsx
apps/web/src/app/[lng]/moderate/: page.tsx
apps/web/src/app/[lng]/profile/: page.tsx
apps/web/src/app/[lng]/rooms/: page.tsx
apps/web/src/app/[lng]/rooms/[room_id]/: page.tsx
apps/web/src/app/[lng]/signup/: page.tsx
apps/web/src/app/[lng]/user/[username]/: page.tsx
apps/web/src/app/[lng]/user/[username]/change/: page.tsx
apps/web/src/app/user/[username]/: page.tsx
apps/web/src/components/: registry.tsx
apps/web/src/i18n/: server.ts
