[package]
name = "typerbeast-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["alloc", "password-hash"] }
axum = { version = "0.8.3" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.40", default-features = false, features = ["now", "serde"] }
config = { version = "0.15.11", default-features = false }
deadpool-runtime = { version = "0.1.4", features = ["tokio_1"] }
diesel = { version = "2.2.9", features = ["chrono", "uuid", "network-address"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
ipnetwork = "0.21.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
# panic = "abort"
codegen-units = 1
