[package]
name = "typerbeast-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["alloc", "password-hash"] }
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "now",
    "serde",
] }
config = { version = "0.15.11", default-features = false }
deadpool-runtime = { version = "0.1.4", features = ["tokio_1"] }
diesel = { version = "2.2.10", features = [
    "chrono",
    "uuid",
    "network-address",
    "serde_json",
] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
dotenvy = "0.15.7"
futures = { version = "0.3.31", default-features = false }
ipnetwork = "0.21.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand_core = { version = "0.6.4", default-features = false, features = [
    "getrandom",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", default-features = false, features = ["std"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["timeout"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
strip = true
opt-level = 3
# panic = "abort"
codegen-units = 1
